--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -11,3 +11,4 @@
 @import "includes/index/advantages.styl"
 @import "includes/index/nav.styl"
 @import "includes/index/calc.styl"
+@import "includes/index/types.styl"
