--- a/source/html/index.pug
+++ b/source/html/index.pug
@@ -9,3 +9,4 @@ block main
     include includes/index/advantages
     include includes/index/nav
     include includes/index/calc
+    include includes/index/types
