--- a/source/css/common/fonts.styl
+++ b/source/css/common/fonts.styl
@@ -26,6 +26,14 @@
   font-family: "Open Sans";
   font-display: swap;
   font-style: normal;
+  font-weight: 400;
+  src:  url("../fonts/OpenSans-Light.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Open Sans";
+  font-display: swap;
+  font-style: normal;
   font-weight: 600;
   src:  url("../fonts/OpenSans-SemiBold.woff2") format("woff2");
 }
