--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -12,3 +12,4 @@
 @import "includes/index/nav.styl"
 @import "includes/index/calc.styl"
 @import "includes/index/types.styl"
+@import "includes/index/special.styl"
