--- a/source/html/includes/index/calc.pug
+++ b/source/html/includes/index/calc.pug
@@ -34,9 +34,9 @@ section.calc
         button.calc__btn.btn Рассчитать
         ul.calc__footer-list
           li.calc__footer-item
-            input#beznds.calc__footer-input(type="radio", name="nds")
+            input#beznds.calc__footer-input(type="radio" name="nds")
             label.calc__footer-label(for="beznds") Без НДС
           li.calc__footer-item
-            input#snds.calc__footer-input(type="radio", name="nds")
+            input#snds.calc__footer-input(type="radio" name="nds")
             label.calc__footer-label(for="snds") С НДС
-        img.calc__footer-logo(src="img/logo.png", alt="")
+        img.calc__footer-logo(src="img/logo.png" alt="")
