--- a/source/html/index.pug
+++ b/source/html/index.pug
@@ -10,3 +10,4 @@ block main
     include includes/index/nav
     include includes/index/calc
     include includes/index/types
+    include includes/index/special
