--- a/source/html/common/head.pug
+++ b/source/html/common/head.pug
@@ -5,6 +5,7 @@ head
   title #{title}
   link(rel="preload" href="fonts/Mulish-Regular.woff2" as="font")
   link(rel="preload" href="fonts/Mulish-Bold.woff2" as="font")
+  link(rel="preload" href="fonts/OpenSans-Light.woff2" as="font")
   link(rel="preload" href="fonts/OpenSans-SemiBold.woff2" as="font")
   link(rel="preload" href="fonts/OpenSans-Bold.woff2" as="font")
   link(rel="preload" href="fonts/Raleway-Regular.woff2" as="font")
