Верстка блоков: ISO сертификаты и CTA

--- a/source/css/includes/index/special.styl
+++ b/source/css/includes/index/special.styl
@@ -1,5 +1,6 @@
 .special
   position relative
+  margin-bottom 138px
   &::before
     content url("../img/icons/special-block.svg")
     position absolute
