--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -13,3 +13,5 @@
 @import "includes/index/calc.styl"
 @import "includes/index/types.styl"
 @import "includes/index/special.styl"
+@import "includes/index/iso.styl"
+@import "includes/index/cta.styl"
