--- a/source/html/index.pug
+++ b/source/html/index.pug
@@ -11,3 +11,5 @@ block main
     include includes/index/calc
     include includes/index/types
     include includes/index/special
+    include includes/index/iso
+    include includes/index/cta
