--- a/source/css/common/variables.styl
+++ b/source/css/common/variables.styl
@@ -2,6 +2,7 @@
 $Raleway = "Raleway", Arial, Helvetica, sans-serif
 $Mulish = "Mulish", Arial, Helvetica, sans-serif
 $OpenSans = "Open Sans", Arial, Helvetica, sans-serif
+$Jost = "Jost", Arial, Helvetica, sans-serif
 
 // Colors
 $white = #ffffff
