--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -15,3 +15,5 @@
 @import "includes/index/special.styl"
 @import "includes/index/iso.styl"
 @import "includes/index/cta.styl"
+@import "includes/index/price.styl"
+@import "includes/index/clean.styl"
