--- a/source/html/index.pug
+++ b/source/html/index.pug
@@ -13,3 +13,5 @@ block main
     include includes/index/special
     include includes/index/iso
     include includes/index/cta
+    include includes/index/price
+    include includes/index/clean
