--- a/source/css/common/fonts.styl
+++ b/source/css/common/fonts.styl
@@ -45,3 +45,11 @@
   font-weight: 700;
   src:  url("../fonts/OpenSans-Bold.woff2") format("woff2");
 }
+
+@font-face {
+  font-family: "Jost";
+  font-display: swap;
+  font-style: normal;
+  font-weight: 600;
+  src:  url("../fonts/Jost-SemiBold.woff2") format("woff2");
+}
