--- a/source/html/common/head.pug
+++ b/source/html/common/head.pug
@@ -9,6 +9,7 @@ head
   link(rel="preload" href="fonts/OpenSans-SemiBold.woff2" as="font")
   link(rel="preload" href="fonts/OpenSans-Bold.woff2" as="font")
   link(rel="preload" href="fonts/Raleway-Regular.woff2" as="font")
+  link(rel="preload" href="fonts/Jost-SemiBold.woff2" as="font")
   link(rel="shortcut icon" href="img/favicon.ico" type="image/x-icon")
   link(rel="icon" href="img/favicon.ico" type="image/x-icon")
   link(rel="stylesheet" href="lib/choices.min.css")
