--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -17,3 +17,4 @@
 @import "includes/index/cta.styl"
 @import "includes/index/price.styl"
 @import "includes/index/clean.styl"
+@import "includes/index/job.styl"
