--- a/source/html/index.pug
+++ b/source/html/index.pug
@@ -15,3 +15,4 @@ block main
     include includes/index/cta
     include includes/index/price
     include includes/index/clean
+    include includes/index/job
