Верстка блока "Выполнение рутинной работы"

--- a/source/html/includes/index/job.pug
+++ b/source/html/includes/index/job.pug
@@ -1,7 +1,7 @@
 section.job
   .container
     h2.job__title Поручите рутинную работу профессионалам
-    .job__subtitle.job__subtitle_first Доступность
+    .job__subtitle Доступность
     .job__row-first
       .job__item
         .job__item-false Миф №1
@@ -14,3 +14,32 @@ section.job
         .job__item-title Сложно договориться и неоперативно
         .job__item-true Правда
         p.job__item-text Контр-аргумент. Нет, у нас гибкие тарифные планы, доступные цены, всегда можно попробовать, для этого есть специальный тариф.
+    .job__row-second
+      .job__subtitle Качество
+      .job__row-block
+        .job__row-wrap
+          .job__item
+            .job__item-false Миф №3
+            .job__item-title А качественно ли уберут?
+            .job__item-true Правда
+            p.job__item-text Контр-аргумент. В компании работают настоящие профессионалы с большим опытом, которые умеют справляться даже со сложными случаями. Также наш контроль качества очень высокий и мы внимательно относимся к мелочам и трудновыполнимым задачам.
+          .job__nav
+            button.job__nav-btn.job__nav-btn_prev
+            button.job__nav-btn.job__nav-btn_next
+        .job__slider
+          .job__slider-container.swiper-container
+            .swiper-wrapper
+              .swiper-slide
+                img.job__slider-img(src="img/job-1.png" alt="")
+              .swiper-slide
+                img.job__slider-img(src="img/job-2.png" alt="")
+              .swiper-slide
+                img.job__slider-img(src="img/job-3.png" alt="")
+    .job__row-third
+      .job__subtitle.job__subtitle_first Скорость
+      .job__item
+        .job__item-false Миф №4
+        .job__item-title Сложно найти сервис, который будет работать с моим офисным оборудованием
+        .job__item-true Правда
+        p.job__item-text Контр-аргумент. Нет, мы работаем с любым оборудованием, а еще занимаемся снабжением. Возьмем поиск и поставку расходных материалов на себя.
+      img.job__img(src="img/job-img.png" alt="")
