--- a/source/html/common/head.pug
+++ b/source/html/common/head.pug
@@ -13,4 +13,5 @@ head
   link(rel="shortcut icon" href="img/favicon.ico" type="image/x-icon")
   link(rel="icon" href="img/favicon.ico" type="image/x-icon")
   link(rel="stylesheet" href="lib/choices.min.css")
+  link(rel="stylesheet" href="lib/swiper-bundle.min.css")
   link(rel="stylesheet" href="css/style.min.css")
