--- a/source/html/common/scripts.pug
+++ b/source/html/common/scripts.pug
@@ -1,3 +1,4 @@
 script(src="lib/jquery-3.6.0.min.js")
 script(src="lib/choices.min.js")
+script(src="lib/swiper-bundle.min.js")
 script(src="js/script.min.js")
